--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -3,6 +3,7 @@ on: push
 
 jobs: 
     build:
-        name: Greeting runs-on: ubuntu-latest 
+        name: Greeting
+        runs-on: ubuntu-latest 
         steps:
             - run: echo "Hello, World!"
