fixup! add dispatch_event

--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -4,4 +4,4 @@ jobs:
     dispatch:
         runs-on: ubuntu-latest
         steps:
-            run: echo "${{ toJson(github.event) }}"
+            - run: echo "${{ toJson(github.event) }}"
